Fix text overflow in song list

--- a/code/html/css/style.css
+++ b/code/html/css/style.css
@@ -827,6 +827,8 @@ input {
   padding: 0 4px;
   position: relative;
   height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #section-songlist .resize-slider {
   width: 8px;
